--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "2.0.0",
   "private": true,
   "description": "The perfect starter kit for building beautiful websites with Next.js and Notion.",
-  "author": "Travis Fischer <travis@transitivebullsh.it>",
-  "repository": "transitive-bullshit/nextjs-notion-starter-kit",
+  "author": "Clark Weckmann",
+  "repository": "clarkhacks/AlexanderBrandKit.git",
   "license": "MIT",
   "engines": {
     "node": ">=16"
